--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="card" >
           <div class=".container-fluid">
             <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
-          <div class="carousel-inner">
+          <div class="carousel-inner" id="carrouselCard">
             <div class="carousel-item active ">
               <img src="images/imgtr1.jpg" class="d-block w-100" alt="...">
             </div>
@@ -106,7 +106,7 @@
         <div class="card" >
           <div class=".container-fluid">
             <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
-          <div class="carousel-inner">
+          <div class="carousel-inner" id="carrouselCard">
             <div class="carousel-item active ">
               <img src="images/imgtr1.jpg" class="d-block w-100" alt="...">
             </div>
@@ -137,7 +137,7 @@
         <div class="card" >
           <div class=".container-fluid">
             <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
-          <div class="carousel-inner">
+          <div class="carousel-inner" id="carrouselCard">
             <div class="carousel-item active ">
               <img src="images/imgtr1.jpg" class="d-block w-100" alt="...">
             </div>
@@ -168,7 +168,7 @@
         <div class="card" >
           <div class=".container-fluid">
             <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
-          <div class="carousel-inner">
+          <div class="carousel-inner" id="carrouselCard">
             <div class="carousel-item active ">
               <img src="images/imgtr1.jpg" class="d-block w-100" alt="...">
             </div>
