--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
   <h2 class="display-6 text-center p-3">Nuestras Unidades</h2>
 
 
-  <section class="container-fluid">
+  <section class="container-fluid" id="containerCards">
     <div class="row">
-      <div class="col-12 col-xl-3">
+      <div class="col-md-4 col-xl-4" id="card1">
         <div class="card" >
           <div class=".container-fluid">
             <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -102,7 +102,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-xl-3">
+      <div class="col-md-4 col-xl-4" id="card2">
         <div class="card" >
           <div class=".container-fluid">
             <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -133,7 +133,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-xl-3">
+      <div class="col-md-4 col-xl-4" id="card3">
         <div class="card" >
           <div class=".container-fluid">
             <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -164,38 +164,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-xl-3">
-        <div class="card" >
-          <div class=".container-fluid">
-            <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
-          <div class="carousel-inner" id="carrouselCard">
-            <div class="carousel-item active ">
-              <img src="images/imgtr1.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item ">
-              <img src="images/imgtr2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item ">
-              <img src="images/imgtr4.jpg" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCard1" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Anterior</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselCard1" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Siguiente</span>
-          </button>
-        </div>
-      </div>
-          <div class="card-body">
-            <h5 class="card-title">Cabaña 4</h5>
-            <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+      
 
   </section>
 
