--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
     </header>
 
   <main>
-    <h2 class="display-6 text-center p-3">Nuestras Unidades</h2>
+    <h2 class="display-6 text-center p-3">Nuestras Cabañas</h2>
 
   <!----------------CARDS CABAÑAS------------->
+
+              <!--card1-->
 
     <section class="container-fluid" id="containerCards">
         <div class="row">
@@ -99,11 +101,31 @@
             </div>
           </div>
               <div class="card-body">
-                <h5 class="card-title">Cabaña Simple</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title text-center">Cabaña Simple</h5>
               </div>
+                            <!--acordeonCard2-->
+              <div class="accordion accordion-flush" id="accordionFlushExample">
+                
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne1" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Acordeón artículo #1
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne1" class="accordion-collapse collapse" aria-labelledby="flush-headingOne">
+                    <div class="accordion-body">Contenido placeholder para este acordeón, que pretende demostrar la clase <code>.accordion-flush</code>. Este es el cuerpo de acordeón del primer elemento.</div>
+                  </div>
+                </div> 
+              </div>
+            
+
             </div>
           </div>
+
+
+
+              <!--card2-->
+
           <div class="col-md-4 col-xl-4" id="card2">
             <div class="card" >
               <div class=".container-fluid">
@@ -130,11 +152,33 @@
             </div>
           </div>
               <div class="card-body">
-                <h5 class="card-title">Cabaña Doble</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title text-center">Cabaña Doble</h5>
               </div>
+
+              <!--acordeonCard2-->
+              <div class="accordion accordion-flush" id="accordionFlushExample">
+
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne2" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Acordeón artículo #1
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne2" class="accordion-collapse collapse" aria-labelledby="flush-headingOne">
+                    <div class="accordion-body">Contenido placeholder para este acordeón, que pretende demostrar la clase <code>.accordion-flush</code>. Este es el cuerpo de acordeón del primer elemento.</div>
+                  </div>
+                </div> 
+              </div>
+
+
             </div>
           </div>
+
+
+
+              <!--card3-->
+
           <div class="col-md-4 col-xl-4" id="card3">
             <div class="card" >
               <div class=".container-fluid">
@@ -161,9 +205,25 @@
             </div>
           </div>
               <div class="card-body">
-                <h5 class="card-title">Cabaña Triple</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title text-center">Cabaña Triple</h5>
               </div>
+                            <!--acordeonCard3-->
+              <div class="accordion accordion-flush" id="accordionFlushExample">
+
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne3" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Acordeón artículo #1
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne3" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" >
+                    <div class="accordion-body">Contenido placeholder para este acordeón, que pretende demostrar la clase <code>.accordion-flush</code>. Este es el cuerpo de acordeón del primer elemento.</div>
+                  </div>
+                </div> 
+              </div>
+
+
             </div>
           </div>
       </section>
