--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
 
       <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-2" id="boxubi">
 
-        <div class="col">
-          <div class="card">
+        <div class="col ">
+          <div class="card ">
             <div class="card-body" id="iframe">
               <div class="ratio ratio-4x3" >
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4252.348725834405!2d-71.45173996091913!3d-41.09380449304551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x961a77e3ab281749%3A0xdceb488aa147f1ee!2sAv.%20Exequiel%20Bustillo%2013840%2C%20San%20Carlos%20de%20Bariloche%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses-419!2sar!4v1664164530947!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -273,10 +273,10 @@
     </div>
 
     <section class="container-fluid">
-      <div class="row row-cols-1 row-cols-md-3 g-5">
+      <div class="row row-cols-1 row-cols-md-3 g-5 ">
 
-        <div class="col" >
-          <div class="card" id="cardEx">
+        <div class="col " >
+          <div class="card " id="cardEx">
             <div class="card-header">
               Cerro Tronador
             </div>
@@ -306,15 +306,15 @@
     </section>
 
     <!-------------CONTACTO----------->
-    <h2 class="display-6 text-center p-3" id="h2">Contacto</h2>
+    <h2 class="display-6 text-center mt-5 pt-3 mb-3 pb-3" >Contacto</h2>
     
     <section class="container-fluid">
       <div class="row">
 
         <div class="col-sm-6">
+          <h1 class="text-center display-6 mb-4">Completa el formulario y nos pondremos en contacto con vos.</h1>
           <div class="card">
             <div class="card-body">
-
 
             <div class="container">
               <form class="row">
@@ -383,6 +383,15 @@
                     <option value="2">Media Pension</option>
                     <option value="3">Pension Completa</option>
                   </select>
+                </div>
+
+                <div class="col-12 mt-3 mb-3">
+                  <label for="extrAsk" class="form-label"> Consultas:</label>
+                  <textarea class="form-control" id="extrAsk" rows="3"></textarea>
+                </div>
+
+                <div class="col-6">
+                  <button class="btn btn-primary" type="submit">Enviar</button>
                 </div>
 
               </form>
