--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Casa de Piedras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
 
@@ -79,7 +82,7 @@
 
     <section class="container-fluid" id="containerCards">
         <div class="row">
-          <div class="col-md-4 col-xl-4" id="card">
+          <div class="col-md-4 col-xl-4 mb-4" id="card">
             <div class="card shadow-lg" >
               <div class=".container-fluid">
                 <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -131,7 +134,7 @@
               <!--card2-->
 
           <div class="col-md-4 col-xl-4" id="card2">
-            <div class="card shadow-lg" id="card">
+            <div class="card shadow-lg mb-4" id="card">
               <div class=".container-fluid">
                 <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-inner" id="carrouselCard">
@@ -184,7 +187,7 @@
               <!--card3-->
 
           <div class="col-md-4 col-xl-4" id="card">
-            <div class="card shadow-lg" >
+            <div class="card shadow-lg mb-4" >
               <div class=".container-fluid">
                 <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-inner" id="carrouselCard">
@@ -238,7 +241,7 @@
     
     <section class="container-fluid">
 
-      <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-2 g-5" id="boxubi">
+      <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-2 g-3" id="boxubi">
 
         <div class="col">
           <div class="card shadow-lg">
@@ -268,9 +271,9 @@
 
     <!-------------EXCURSIONES----------->
 
-    <h2 class="display-6 text-center p-3" id="h2ex">Excurciones</h2>
-    <div id="h4">
-    <h4>Contamos con excursiones, paseos y otras actividades turísticas para hacer en Bariloche. Viví la mejor experiencia para conocer la ciudad. Podes contratar con o sin traslado.</h4>
+    <h2 class="display-6 text-center p-3 mt-4 " id="h2ex">Excursiones</h2>
+    <div class="mb-4" id="h4">
+    <h4 class="display-6 mb-5">Contamos con excursiones, paseos y otras actividades turísticas para hacer en Bariloche. Viví la mejor experiencia para conocer la ciudad. Podes contratar con o sin traslado.</h4>
     </div>
 
     <section class="container-fluid">
@@ -313,7 +316,7 @@
       <div class="row">
 
         <div class="col-sm-12">
-          <h1 class="text-center display-6 mb-4">Completa el formulario y nos pondremos en contacto con vos.</h1>
+          <h1 class="text-center display-6 mb-4" id="h2Contact">Completa el formulario y nos pondremos en contacto con vos.</h1>
           <div class="card shadow-lg">
             <div class="card-body">
 
@@ -403,7 +406,7 @@
         </div>
 
         <div class="col-sm-12">
-          <h1 class="text-center display-6 mt-5 mb-4">¿Ya reservaste? Completar para conocer el estado de tu reserva.</h1>
+          <h1 class="text-center display-6 mt-5 mb-4"id="h2Contact">¿Ya reservaste? Completar para conocer el estado de tu reserva.</h1>
           <div class="card shadow-lg">
             <div class="card-body">
               
