--- a/index.html
+++ b/index.html
@@ -119,11 +119,19 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne1" aria-expanded="false" aria-controls="flush-collapseOne">
-                      Acordeón artículo #1
+                      Ver informacion sobre la Cabaña.
                     </button>
                   </h2>
                   <div id="flush-collapseOne1" class="accordion-collapse collapse" aria-labelledby="flush-headingOne">
-                    <div class="accordion-body">Contenido placeholder para este acordeón, que pretende demostrar la clase <code>.accordion-flush</code>. Este es el cuerpo de acordeón del primer elemento.</div>
+                    <div class="accordion-body">
+                        <ul class="list-group">
+                          <li class="list-group-item">Cabaña de una planta.</li>
+                          <li class="list-group-item">Baño privado.</li>
+                          <li class="list-group-item">Servicio ropa blanca.</li>
+                          <li class="list-group-item">Habitacion con cama matrimonial.</li>
+                          <li class="list-group-item">Cocina integrada.</li>
+                      </ul>
+                  </div>
                   </div>
                 </div> 
               </div>
@@ -175,11 +183,19 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne2" aria-expanded="false" aria-controls="flush-collapseOne">
-                      Acordeón artículo #1
+                      Ver informacion sobre la Cabaña.
                     </button>
                   </h2>
                   <div id="flush-collapseOne2" class="accordion-collapse collapse" aria-labelledby="flush-headingOne">
-                    <div class="accordion-body">Contenido placeholder para este acordeón, que pretende demostrar la clase <code>.accordion-flush</code>. Este es el cuerpo de acordeón del primer elemento.</div>
+                    <div class="accordion-body">
+                        <ul class="list-group">
+                          <li class="list-group-item">Cabaña de una planta, 3 ambientes.</li>
+                          <li class="list-group-item">Baño privado.</li>
+                          <li class="list-group-item">Servicio de ropa blanca.</li>
+                          <li class="list-group-item">Habitacion con cama matrimonal y habitacion con cama individual.</li>
+                          <li class="list-group-item">Cocina y comedor integrado.</li>
+                      </ul>
+                  </div>
                   </div>
                 </div> 
               </div>
@@ -230,11 +246,19 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne3" aria-expanded="false" aria-controls="flush-collapseOne">
-                      Acordeón artículo #1
+                      Ver informacion sobre la Cabaña.
                     </button>
                   </h2>
                   <div id="flush-collapseOne3" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" >
-                    <div class="accordion-body">Contenido placeholder para este acordeón, que pretende demostrar la clase <code>.accordion-flush</code>. Este es el cuerpo de acordeón del primer elemento.</div>
+                    <div class="accordion-body">
+                        <ul class="list-group">
+                          <li class="list-group-item">Cabaña de dos plantas.</li>
+                          <li class="list-group-item">Dos baños privados.</li>
+                          <li class="list-group-item">Servicio de ropa blanca.</li>
+                          <li class="list-group-item">Habitacion con cama matrimonial en planta alta y habitacion doble en planta baja.</li>
+                          <li class="list-group-item">Cocina y comedor con deck exterior.</li>
+                      </ul>
+                  </div>
                   </div>
                 </div> 
               </div>
