--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Casa de Piedras</title>
+    <title>Casa de Piedra</title>
+    <link rel="icon" type="image/jpg" href="images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -73,9 +74,9 @@
 
   <main>
     <h2 class="display-6 text-center p-3" id="h2">Nuestras Cabañas</h2>
+
+
   <!----------------UNIDADES------------->
-
-
 
   <!---------CARDS CABAÑAS--------->
 
@@ -479,6 +480,8 @@
     </section>
 
   </main>
+  <!--------FOOTER--------->
+
         <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
           <div class="col-md-4 d-flex align-items-center">
             <span class="text-muted">© 2022 Todos los derechos reservados. Casa de Piedra.</span>
