--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <h4 class="display-6 mb-5">Contamos con excursiones, paseos y otras actividades turísticas para hacer en Bariloche. Viví la mejor experiencia para conocer la ciudad. Podes contratar con o sin traslado.</h4>
     </div>
 
-    <section class="container containerExc" >
+    <section class="container-fluid" >
       <div class="row row-cols-1 row-cols-md-3 g-5">
 
         <div class="col " id="card" data-aos="fade-right">
