--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
           <div class="col">
             <div class="card shadow-lg" data-aos="fade-left">
               <div class="card-body text-center .gradient" id="bodyCard">
-                <h5 class="card-title">¿Donde nos ubicamos?</h5>           
+                <h5 class="card-title" id="ubiTitle">¿Donde nos ubicamos?</h5>           
                 <p class="card-text">Complejo Casa de Piedra se encuentra ubicado en Av. Bustillo 13840. Cuenta con una excelente vista al Lago Nahuel Huapi.
                 Estratégicamente ubicados para la mejor vista de Bariloche y su entorno... Atendido por sus dueños y con una excelente ubicación frente al lago Nahuel Huapi y a tan sólo 800 metros de Playa Serena, lo invita a disfrutar de su estadía en Bariloche. En medio de un paisaje deslumbrante de montañas y bosques. Disfrutarás de una fascinante naturaleza en una hectárea de bosque nativo de viejos cipreses, amplio parque, sendas, rincones y flores durante todo el año.</p>
-                <h5 class="card-subtitle text-muted">¿Como llegar?</h5>
+                <h5 class="card-subtitle" id="ubiTitle" >¿Como llegar?</h5>
                 <p>La linea 20 de Transporte Urbano de Pasajos (TUP) ofrece el servicio que te lleva desde la terminal de micros, pasando por el centro de San Carlos de Bariloche. Para tomarlo en el centro podés hacerlo en Moreno al 400, en la Plaza que está detrás del Centro Cívico en San Martín e Indendencia o sino sobre la Avenida Exequiel Bustillo.</p>            
               </div>
             </div>
