--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Casa de Piedra - Cabañas Bariloche</title>
     <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
-    <meta name="keywords" content="Cabaña,Alquiler,Vuelos,Vacaciones,Turismo,Excursiones,Bariloche,Viajes,Patagonia,Sur">
+    <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
+    <meta property="og:type" content="article"> 
+    <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
+    <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
+    <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
+    <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+    <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
+    <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
+    <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+    <meta name="author" content="FrancoHoyos">
     <link rel="icon" type="image/jpg" href="images/favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -54,13 +63,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade slide-in-blurred-right" data-bs-ride="carousel">
           <div class="carousel-inner shadow-lg">
             <div class="carousel-item active ">
-              <img src="images/imgtr1.jpg" class="d-block w-100" alt="...">
+              <img src="images/imgtr1.jpg" class="d-block w-100" alt="imagenDeAguila">
             </div>
             <div class="carousel-item ">
-              <img src="images/imgtr2.jpg" class="d-block w-100" alt="...">
+              <img src="images/imgtr2.jpg" class="d-block w-100" alt="imagenMontañasNevadas">
             </div>
             <div class="carousel-item ">
-              <img src="images/imgtr4.jpg" class="d-block w-100" alt="...">
+              <img src="images/imgtr4.jpg" class="d-block w-100" alt="ImagenMontañayBosque">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -94,13 +103,13 @@
                 <div id="carouselCard1" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-inner" id="carrouselCard">
                 <div class="carousel-item active ">
-                  <img src="images/interior1.jpg" class="d-block w-100" alt="...">
+                  <img src="images/interior1.jpg" class="d-block w-100" alt="interiorLiving">
                 </div>
                 <div class="carousel-item ">
-                  <img src="images/interior1.2.jpg" class="d-block w-100" alt="...">
+                  <img src="images/interior1.2.jpg" class="d-block w-100" alt="interiorChimenea">
                 </div>
                 <div class="carousel-item ">
-                  <img src="images/interior1.3.jpg" class="d-block w-100" alt="...">
+                  <img src="images/interior1.3.jpg" class="d-block w-100" alt="interiorHabitacion">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselCard1" data-bs-slide="prev">
@@ -156,13 +165,13 @@
                 <div id="carouselCard2" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-inner" id="carrouselCard">
                 <div class="carousel-item active ">
-                  <img src="images/interior2.0.jpg" class="d-block w-100" alt="...">
+                  <img src="images/interior2.0.jpg" class="d-block w-100" alt="interiorCama">
                 </div>
                 <div class="carousel-item ">
-                  <img src="images/interior2.2.jpg" class="d-block w-100" alt="...">
+                  <img src="images/interior2.2.jpg" class="d-block w-100" alt="interiorHabitacion">
                 </div>
                 <div class="carousel-item ">
-                  <img src="images/interior2.3.jpg" class="d-block w-100" alt="...">
+                  <img src="images/interior2.3.jpg" class="d-block w-100" alt="interiorLiving">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselCard2" data-bs-slide="prev">
@@ -220,13 +229,13 @@
                 <div id="carouselCard3" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-inner" id="carrouselCard">
                 <div class="carousel-item active ">
-                  <img src="images/interior3.jpg" class="d-block w-100" alt="...">
+                  <img src="images/interior3.jpg" class="d-block w-100" alt="interiorCocina">
                 </div>
                 <div class="carousel-item ">
-                  <img src="images/interior3.2.jpg" class="d-block w-100" alt="...">
+                  <img src="images/interior3.2.jpg" class="d-block w-100" alt="interiorComedor">
                 </div>
                 <div class="carousel-item ">
-                  <img src="images/interior3.3.jpg" class="d-block w-100" alt="...">
+                  <img src="images/interior3.3.jpg" class="d-block w-100" alt="interiorLiving">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselCard3" data-bs-slide="prev">
