--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="card shadow-lg" data-aos="fade-right" >
               <div class="card-body" id="iframe">
                 <div class="ratio ratio-4x3" >
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4252.348725834405!2d-71.45173996091913!3d-41.09380449304551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x961a77e3ab281749%3A0xdceb488aa147f1ee!2sAv.%20Exequiel%20Bustillo%2013840%2C%20San%20Carlos%20de%20Bariloche%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses-419!2sar!4v1664164530947!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" name="mapa"></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4252.348725834405!2d-71.45173996091913!3d-41.09380449304551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x961a77e3ab281749%3A0xdceb488aa147f1ee!2sAv.%20Exequiel%20Bustillo%2013840%2C%20San%20Carlos%20de%20Bariloche%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses-419!2sar!4v1664164530947!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="mapa"></iframe>
                 </div>
               </div>
             </div>
