--- a/cabNahuel.html
+++ b/cabNahuel.html
@@ -62,15 +62,7 @@
     </header>
 
     <main>
-        <!--
-        <nav aria-label="breadcrumb">               
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-              <li class="breadcrumb-item"><a href="units.html">Unidades</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Cabaña Nahuel</li>
-            </ol>
-          </nav>
-          -->
+
           <section>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
@@ -92,7 +84,7 @@
             </div>
             <div class="abs">
                 <h1 class="h1" >Cabaña Nahuel</h2>
-                <h2 class="h2"> Cabaña doble</h2>
+                <h2 class="h2"> Cabaña Doble</h2>
             </div>
         </section>
 
@@ -195,7 +187,7 @@
 
         <section class="text-center">
             <h3 class="h3 text-center mt-2">Realice su reserva para la cabaña Nahuel</h3>
-            <a href="#" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
+            <a href="#" class="btn btn-outline-secondary btn-xl mt">Reservar ahora</a>
         </section>
 
 
