--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
       </div>
 
     <h1 class="display-5 text-center p-3" id="h1"> Complejo Casa de Piedra</h1>
+    <p class="text-center">En plena naturaleza y a sólo 13km de la ciudad de Bariloche. Con vista a los Cerros y a la cordillera de Los Andes.
+    Totalmente equipadas con la mejor calidad y el mayor confort, para disfrutar y descansar todo el año. En el Km 13 de la Avenida Bustillo se encuentra el Complejo Casa de Piedra. Cómodas unidades totalmente equipados ubicadas en un marco natural único. Rodeados por un bosque autóctono, muy cerca de todo y a pocos minutos de la ciudad con todo lo necesario para hacer de su estadía un recuerdo inolvidable.</p>
     </header>
                                       <!-----------------MAIN----------------->
   <main>
@@ -250,7 +252,7 @@
     </div>
 
     <section class="container-fluid" >
-      <div class="row row-cols-1 row-cols-md-3 g-5">
+      <div class="row row-cols-1 row-cols-md-3 ">
 
         <div class="col " id="card" data-aos="fade-right">
           <div class="card shadow-lg" id="cardEx">
