--- a/units.html
+++ b/units.html
@@ -70,8 +70,13 @@
           </nav>
                             <!--titles-->
         <h1 class="display-5 text-center mb-4 ">Nuestros Alojamientos</h2>
+        <p class="text-center">6 confortables unidades con estilo patagónico independientes entre sí. Combinando madera y piedra de la zona con un moderno y bien decorado equipamiento, logrando de esta manera un cálido ambiente inmerso en un paisaje único. Con amplios ventanales que nos permiten apreciar las hermosas vistas al lago y los cerros y nos hacen sentir parte del bosque, una excelente opción de alojamiento en Bariloche para unas vacaciones únicas.
+        Las mismas yacen a orillas de los lagos Nahuel Huapi y Moreno, rodeando una exclusiva bahía con una relajante playa de arena y piedra a sus pies.
+
+        </p>
         <h2 class="h2 text-center mb-2">Cabañas</h2>
         <h3 class="h3 text-center mb-5">Contamos con dos tipos de cabañas disponibles</h3>
+        <p></p>
                             <!--cards cabañas-->
         <div class="container-fluid text-center" >
             <div class="row">                           <!--row-->
@@ -93,7 +98,7 @@
                         <img src="images/cabamain2.jpg" class="carrousel2" alt="">
                         <div class="card-body">
                         <h5 class="card-title">Cabaña Moreno</h5>
-                        <a href="#" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
+                        <a href="cabMoreno.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
                         </div>
                     </div>
                 </div>
