--- a/bungMascardi.html
+++ b/bungMascardi.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cabañas | Cabaña Moreno</title>
+        <title>Cabañas | Bungalow Mascardi</title>
         <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
         <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
         <meta property="og:type" content="article"> 
@@ -67,10 +67,13 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/interiorcab2.jpg" class="d-block w-100" alt="...">
+                        <img src="images/bung2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/interiorcab2.2.jpg" class="d-block w-100" alt="...">
+                        <img src="images/bung1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/bung3.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -83,20 +86,20 @@
                 </button>
             </div>
             <div class="abs">
-                <h1 class="h1" >Cabaña Moreno</h2>
-                <h2 class="h2"> Cabaña Triple</h2>
+                <h1 class="h1" >Bungalow Mascardi</h2>
+                <h2 class="h2"> Bungalow dos ambientes</h2>
             </div>
         </section>
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
                 <img src="images/persons.png" class="mb-2" alt="">
-                <h2 class="h2"><b>6</b></h2>
-                <h3 class="h3">Hasta 6 Personas.</h3>
+                <h2 class="h2"><b>4</b></h2>
+                <h3 class="h3">Hasta 4 Personas.</h3>
             </div>
             <div class="mb-5">
                 <img src="images/flat.png" class="mb-2" alt="">
-                <h2 class="h2"><b>70 m2</b></h2>
+                <h2 class="h2"><b>80 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
@@ -107,8 +110,8 @@
         </section>
 
         <section>
-            <h3 class="h2 text-center mb-4 info">Informacion de la Cabaña.</h2>
-            <p class="text-center p">La cabaña Moreno posee un gran ambiente dividido: Una habitacion con cama Queen size y una habitacion con dos camas singles, ambas con Tv por cable y calefaccion. Cuenta un amplio Living con un sillon cama en el que se pueden armar dos camas singles, posee una mesa comedor con sillas y hogar a leña. Cocina 100% equipada con horno, heladera y microondas. Tambien posee un baño completo con bañera. Cabaña con ventanales con vista al bosque y al Lago Moreno, deck exterior con parrilla y mesa con sillas.
+            <h3 class="h2 text-center mb-4 info">Informacion del Bungalow.</h2>
+            <p class="text-center p">El Bungalow Mascardi posee dos grandes ambientes: En planta alta una amplia habitacion con cama King size, ropero integrado, Tv por cable y calefaccion propia. En planta baja cuenta con un Living con sillon cama en el que se pueden armar dos camas singles, posee un comedor con sillas y Tv. Cocina 100% equipada con horno, y heladera. Tambien posee un baño completo con bañera de hidromasajes. Toda la unidad cuenta con ventanales con vista al bosque y a las montañas, deck exterior con parrilla y mesa con sillas.
         </section>
 
         <section>
@@ -143,19 +146,19 @@
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Amplio dormitorio</p>
+                        <p>Dormitorio con ropero integrado</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Habitacion con 2 camas singles</p>
+                        <p>Habitacion con cama King</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Calefaccion y agua caliente</p>
+                        <p>Dormitorio alfombrado</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Sector con parrila y asador</p>
+                        <p>Piso radiante</p>
                     </div>
                 </div>
                 <div class="colum mb-5">
@@ -165,11 +168,15 @@
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Caja fuerte</p>
+                        <p>Caja de seguridad</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Deck exterior</p>
+                        <p>Deck exterior con parrilla</p>
+                    </div>
+                    <div class="infor">
+                        <img src="images/check.png" alt="">
+                        <p>Servicio de limpieza diario</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
@@ -180,7 +187,7 @@
         </section>
 
         <section class="text-center">
-            <h3 class="h3 text-center mt-4">Realice su reserva para la cabaña Moreno</h3>
+            <h3 class="h3 text-center mt-4">Realice su reserva para el Bungalow Moreno</h3>
             <a href="#" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
     </main>
