--- a/units.html
+++ b/units.html
@@ -118,7 +118,7 @@
 
                         <div class="card-body">
                         <h5 class="card-title">Bungalow Mascardi</h5>
-                        <a href="#" class="btn btn-outline-secondary btn-sm col-6 ">Ver Bungalow</a>
+                        <a href="bungMascardi.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver Bungalow</a>
                         </div>
                     </div>
                 </div>
