--- a/bungGutierrez.html
+++ b/bungGutierrez.html
@@ -67,13 +67,13 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/bung2.jpg" class="d-block w-100" alt="...">
+                        <img src="images/bung4.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/bung1.jpg" class="d-block w-100" alt="...">
+                        <img src="images/bung5.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/bung3.jpg" class="d-block w-100" alt="...">
+                        <img src="images/bung6.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -86,32 +86,32 @@
                 </button>
             </div>
             <div class="abs">
-                <h1 class="h1" >Bungalow Mascardi</h2>
-                <h2 class="h2"> Bungalow dos ambientes</h2>
+                <h1 class="h1" >Bungalow Gutierrez</h2>
+                <h2 class="h2"> Bungalow tres ambientes</h2>
             </div>
         </section>
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
                 <img src="images/persons.png" class="mb-2" alt="">
-                <h2 class="h2"><b>4</b></h2>
-                <h3 class="h3">Hasta 4 Personas.</h3>
+                <h2 class="h2"><b>7</b></h2>
+                <h3 class="h3">Hasta 7 Personas.</h3>
             </div>
             <div class="mb-5">
                 <img src="images/flat.png" class="mb-2" alt="">
-                <h2 class="h2"><b>80 m2</b></h2>
+                <h2 class="h2"><b>96 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
                 <img src="images/bed.png" class="mb-2" alt="">
-                <h2 class="h2"><b>$12.000</b></h2>
+                <h2 class="h2"><b>$14.000</b></h2>
                 <h3 class="h3">Tarifa por noche</h3>
             </div>
         </section>
 
         <section>
             <h3 class="h2 text-center mb-4 info">Informacion del Bungalow.</h2>
-            <p class="text-center p">El Bungalow Mascardi posee dos grandes ambientes: En planta alta una amplia habitacion con cama King size, ropero integrado, Tv por cable y calefaccion propia. En planta baja cuenta con un Living con sillon cama en el que se pueden armar dos camas singles, posee un comedor con sillas y Tv. Cocina 100% equipada con horno, y heladera. Tambien posee un baño completo con bañera de hidromasajes. Toda la unidad cuenta con ventanales con vista al bosque y a las montañas, deck exterior con parrilla y mesa con sillas.
+            <p class="text-center p">El Bungalow Gutierrez posee tres grandes ambientes: En planta alta una amplia habitacion con cama King size con baño en suite privado, otra habitacion secundaria con tres camas singles, en ambas ropero integrado, Tv por cable y calefaccion propia. En planta baja cuenta con un Living con sillon cama en el que se pueden armar otras dos camas singles, Cuenta con un comedor con sillas y Tv. Cocina 100% equipada con horno, heladera, microondas y todos los utensillos necesarios. Tambien posee un baño completo con bañera de hidromasajesy piso radiante. Toda la unidad cuenta con ventanales con vista al bosque, el lago y las montañas, deck exterior con parrilla y comedor externo techado.
         </section>
 
         <section>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Servico de ropa blanca</p>
+                        <p>Servicio de ropa blanca</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
@@ -142,11 +142,11 @@
                 <div class="colum mb-4">
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Baño con bañera de hidromasaje</p>
+                        <p>Amplio baño principal con hidromasajes</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Dormitorio con ropero integrado</p>
+                        <p>Dormitorios con ropero integrado y maletero</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
@@ -154,7 +154,7 @@
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Dormitorio alfombrado</p>
+                        <p>Dormitorios alfombrados</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
@@ -168,11 +168,11 @@
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Caja de seguridad</p>
+                        <p>Estufa a pellets</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
-                        <p>Deck exterior con parrilla</p>
+                        <p>Obsequio de bienvenida</p>
                     </div>
                     <div class="infor">
                         <img src="images/check.png" alt="">
