--- a/units.html
+++ b/units.html
@@ -63,20 +63,19 @@
     <main>
 
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-            <ol class="breadcrumb mt-3 ml-5 mb-5">
+            <ol class="breadcrumb ml-5">
               <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
               <li class="breadcrumb-item active" aria-current="page">Unidades</li>
             </ol>
           </nav>
                             <!--titles-->
-        <h1 class="display-5 text-center mb-4 ">Nuestros Alojamientos</h2>
-        <p class="text-center">6 confortables unidades con estilo patagónico independientes entre sí. Combinando madera y piedra de la zona con un moderno y bien decorado equipamiento, logrando de esta manera un cálido ambiente inmerso en un paisaje único. Con amplios ventanales que nos permiten apreciar las hermosas vistas al lago y los cerros y nos hacen sentir parte del bosque, una excelente opción de alojamiento en Bariloche para unas vacaciones únicas.
+        <h1 class="display-5 text-center mb-3 ">Nuestros Alojamientos</h2>
+        <p class="text-center pm mb-5">6 confortables unidades con estilo patagónico independientes entre sí. Combinando madera y piedra de la zona con un moderno y bien decorado equipamiento, logrando de esta manera un cálido ambiente inmerso en un paisaje único. Con amplios ventanales que nos permiten apreciar las hermosas vistas al lago y los cerros y nos hacen sentir parte del bosque, una excelente opción de alojamiento en Bariloche para unas vacaciones únicas.
         Las mismas yacen a orillas de los lagos Nahuel Huapi y Moreno, rodeando una exclusiva bahía con una relajante playa de arena y piedra a sus pies.
-
         </p>
-        <h2 class="h2 text-center mb-2">Cabañas</h2>
-        <h3 class="h3 text-center mb-5">Contamos con dos tipos de cabañas disponibles</h3>
-        <p></p>
+        <h2 class="text-center mb-2">Cabañas</h2>
+        <h3 class="text-center mb-5">Contamos con dos tipos de cabañas disponibles</h3>
+
                             <!--cards cabañas-->
         <div class="container-fluid text-center" >
             <div class="row">                           <!--row-->
@@ -107,8 +106,8 @@
 
 
 
-        <h2 class="h2 text-center mt-5 m2-3">Bungalows</h2>
-        <h3 class="h3 text-center mb-5">Disponemos de dos tipos de departamentos estilo Bungalow</h3>
+        <h2 class="text-center mt-5 m2-3">Bungalows</h2>
+        <h3 class="text-center mb-5">Disponemos de dos tipos de departamentos estilo Bungalow</h3>
             <div class="row">                           <!--row-->
 
                 <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
@@ -131,7 +130,7 @@
                     
                         <div class="card-body">
                         <h5 class="card-title">Bungalow Gutierrez</h5>
-                        <a href="#" class="btn btn-outline-secondary btn-sm col-6 ">Ver Bungalow</a>
+                        <a href="bungGutierrez.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver Bungalow</a>
                         </div>
                     </div>
                 </div>
@@ -141,8 +140,8 @@
 
 
 
-        <h2 class="h2 text-center mt-5 mb-3">Casas Modernas</h2>
-        <h3 class="h3 text-center mb-5">Contamos con amplias Casas Moderas, espaciosas y equipadas con las mejores comodidades.</h3>
+        <h2 class="text-center mt-5 mb-3">Casas Modernas</h2>
+        <h3 class="text-center mb-5 ">Contamos con amplias Casas Moderas, espaciosas y equipadas con las mejores comodidades.</h3>
             <div class="row">                           <!--row-->
 
                 <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
