--- a/units.html
+++ b/units.html
@@ -62,14 +62,14 @@
                     <!------------MAIN---------->
     <main>
 
-        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <!--<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb ml-5">
               <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
               <li class="breadcrumb-item active" aria-current="page">Unidades</li>
             </ol>
-          </nav>
+          </nav>-->
                             <!--titles-->
-        <h1 class="display-5 text-center mb-3 ">Nuestros Alojamientos</h2>
+        <h1 class="display-5 text-center mb-3 mt-5">Nuestros Alojamientos</h2>
         <p class="text-center pm mb-5">6 confortables unidades con estilo patagónico independientes entre sí. Combinando madera y piedra de la zona con un moderno y bien decorado equipamiento, logrando de esta manera un cálido ambiente inmerso en un paisaje único. Con amplios ventanales que nos permiten apreciar las hermosas vistas al lago y los cerros y nos hacen sentir parte del bosque, una excelente opción de alojamiento en Bariloche para unas vacaciones únicas.
         Las mismas yacen a orillas de los lagos Nahuel Huapi y Moreno, rodeando una exclusiva bahía con una relajante playa de arena y piedra a sus pies.
         </p>
@@ -84,7 +84,7 @@
                     <div class="card shadow-lg" >  <!--card1-->
                         <img src="images/caba3.png" class="carrousel2" alt="">
                         <div class="card-body">
-                        <h5 class="card-title">Cabaña Nahuel</h5>
+                        <h4 class="card-title">Cabaña Nahuel</h4>
                         <a href="cabNahuel.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
 
                         <img src="images/cabamain2.jpg" class="carrousel2" alt="">
                         <div class="card-body">
-                        <h5 class="card-title">Cabaña Moreno</h5>
+                        <h4 class="card-title">Cabaña Moreno</h4>
                         <a href="cabMoreno.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                         <img src="images/bungalow3.jpg" class="carrousel2" alt="">
 
                         <div class="card-body">
-                        <h5 class="card-title">Bungalow Mascardi</h5>
+                        <h4 class="card-title">Bungalow Mascardi</h4>
                         <a href="bungMascardi.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver Bungalow</a>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                        <img src="images/bungalowmain2.jpg" class="carrousel2" alt="">
                     
                         <div class="card-body">
-                        <h5 class="card-title">Bungalow Gutierrez</h5>
+                        <h4 class="card-title">Bungalow Gutierrez</h4>
                         <a href="bungGutierrez.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver Bungalow</a>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                         <img src="images/modernmain2.jpg" class="carrousel2" alt="">
 
                         <div class="card-body">
-                        <h5 class="card-title">Casa Catedral</h5>
+                        <h4 class="card-title">Casa Catedral</h4>
                         <a href="#" class="btn btn-outline-secondary btn-sm col-6 ">Ver casa</a>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                         <img src="images/modern2.jpg" class="carrousel2" alt="">
 
                         <div class="card-body">
-                        <h5 class="card-title">Casa Meliquina</h5>
+                        <h4 class="card-title">Casa Meliquina</h4>
                         <a href="#" class="btn btn-outline-secondary btn-sm col-6 ">Ver casa</a>
                         </div>
                     </div>
