--- a/units.html
+++ b/units.html
@@ -24,6 +24,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -151,7 +154,7 @@
 
                         <div class="card-body">
                         <h4 class="card-title">Casa Catedral</h4>
-                        <a href="#" class="btn btn-outline-secondary btn-sm col-6 ">Ver casa</a>
+                        <a href="casaCatedral.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver casa</a>
                         </div>
                     </div>
                 </div>
