--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -208,6 +211,9 @@
 
 
             </div>
+          </div>
+          <div id="btnunits">
+            <a href="units.html" class="btn btn-outline-secondary btn-xl text-center mt-3" >Ver todas las Unidades</a>
           </div>
       </section>
 
