--- a/activities.html
+++ b/activities.html
@@ -66,24 +66,26 @@
 
     <main>
 
-        <div class="container-fluid max">
+        <div class="container-xxl max">
 
-            <div class="contenedor">
+            <div class="contenedor shadow-lg">
                 <img src="images/lagos.jpg" alt="">
                 <div class="text-center">
-                    <h2>Ruta de los 7 lagos</h2>
+                    <h3>Excursion Lacustre</h3>
+                    <h2>Ruta de los 7 Lagos</h2>
                 </div>
-
             </div>
-            <div class="contenedor">
-                <img src="images/lagos.jpg" alt="">
+
+
+
+            <div class="contenedor shadow-lg">
+                <img src="images/7lagos.jpg" alt="">
                 <div class="text-center">
-                    <h2>Ruta de los 7 lagos</h2>
-
-
-                    <!-- Button trigger modal -->
+                    <h3>Excursion Lacustre</h3>
+                    <h2>Ruta de los 7 Lagos</h2>
+                   <!-- Button modal -->
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Lanzar demo de modal
+                    Conoce la Excursion
                 </button>
                 
                 <!-- Modal -->
@@ -91,15 +93,36 @@
                     <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Título del modal</h5>
+                        <h3 class="modal-title text-center" id="exampleModalLabel">Excursion a San Martin de los Andes por la Ruta de los 7 Lagos</h3>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                        ...
+                        <p>La famosa excursión por Los Siete lagos se inicia por la ruta nacional 237 hacia el Norte, el camino es sinuoso y rodeado por un paisaje increíble de bosques andino patagónicos, lagos y montañas. Se pasa por Villa la Angostura y a lo largo del camino se observan los lagos Correntoso, Espejo, Villarino, Falkner, Hermoso, Meliquina y finalmente se arriba a la ciudad de San Martín de los Andes a orillas del Lago Lacar, en donde los paisajes cordilleranos la rodean. Tiempo libre para recorrer el centro de la ciudad. Regreso por el mismo camino, para observar y disfrutar de otras vistas.</p>
                         </div>
+
+                        <div class="divsModal">
+                            <div class="containModal">
+                                <img src="images/reloj.png" alt="">
+                                <h3 id="h3">Horario</h3>
+                                <h4>08:00 a 19:00</h4>
+                            </div>
+                            <div class="containModal">
+                                <img src="images/calendario.png" alt="">
+                                <h3 id="h3">Salidas</h3>
+                                <h4>08:00 hasta 19:00</h4>
+                            </div>
+                            <div class="containModal">
+                                <img src="images/chango.png" alt="">
+                                <h3 id="h3">Desde</h3>
+                                <h4>$6.000</h4>
+                            </div>
+
+                        </div>
+
+
+
                         <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-primary">Guardar cambios</button>
                         </div>
                     </div>
                     </div>
@@ -116,7 +139,7 @@
                 </div>
 
             </div>
-            <div class="contenedor">
+            <div class="contenedor shadow-lg">
                 <img src="images/lagos.jpg" alt="">
                 <div class="text-center">
                     <h2>Ruta de los 7 lagos</h2>
