--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                   <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#h2">Unidades</a>
+                  <a class="nav-link" href="units.html">Unidades</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#h22">Ubicacion</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#h2ex">Actividades</a>
+                  <a class="nav-link" href="activities.html">Actividades</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#contact">Contacto</a>
