--- a/units.html
+++ b/units.html
@@ -43,16 +43,16 @@
               <div class="collapse navbar-collapse text-center" id="navbarNav">
                 <ul class="navbar-nav ms-auto" >
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#h2">Unidades</a>
+                    <a class="nav-link" href="units.html">Unidades</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#h22">Ubicacion</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#h2ex">Actividades</a>
+                    <a class="nav-link" href="activities.html">Actividades</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#contact">Contacto</a>
